--- a/Valence/Valence.vcxproj
+++ b/Valence/Valence.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="Valence.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Element.h" />
+    <ClInclude Include="Atom.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="Universe.h" />
   </ItemGroup>
