--- a/Valence/Valence.vcxproj
+++ b/Valence/Valence.vcxproj
@@ -128,6 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Atom.cpp" />
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="Valence.cpp" />
   </ItemGroup>
