Split universe into seperate h/cpp files

--- a/Valence/Valence.vcxproj
+++ b/Valence/Valence.vcxproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <ClCompile Include="Atom.cpp" />
     <ClCompile Include="GameEngine.cpp" />
+    <ClCompile Include="Universe.cpp" />
     <ClCompile Include="Valence.cpp" />
   </ItemGroup>
   <ItemGroup>
