--- a/Valence/Valence.vcxproj.filters
+++ b/Valence/Valence.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Atom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Universe.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Universe.h">
