--- a/Valence/Valence.vcxproj
+++ b/Valence/Valence.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Atom.h" />
+    <ClInclude Include="Config.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="Universe.h" />
   </ItemGroup>
