--- a/Valence/Valence.vcxproj.filters
+++ b/Valence/Valence.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Atom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
